[package]
name = "slackfm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures = "0.3.30"
nestify = "0.3.3"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
