[package]
name = "slackfm-app"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib", "."]

[dependencies]
slack-morphism = { version = "2.3.2", features = ["hyper", "axum"] }
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["full"] }
dotenvy_macro = "0.15.7"
menv = "0.2.7"
dotenvy = "0.15.7"
slackfm = { path = "lib" }
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
axum = "0.7.5"
