[package]
name = "slackfm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
futures = "0.3.30"
nestify = "0.3.3"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
url = { version = "2.5.2", features = ["serde"] }
tokio = { version = "1.38.0" }
slack-morphism = { version = "2.3.2", features = ["hyper"] }
chrono = "0.4.38"
error-stack = { version = "0.4.1", features = ["spantrace"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
dotenvy_macro = "0.15.7"
menv = "0.2.7"
dotenvy = "0.15.7"
